--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
     "**/.DS_Store": true,
     "**/Thumbs.db": true
   },
-  "files.autoSave": "afterDelay"
+  "files.autoSave": "afterDelay",
+  "explorer.compactFolders": false,
+  "workbench.tree.indent": 22
 }
