--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,28 +5,7 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "[!s]*/**": true,
-    "s[!r]*/**": true,
-    "sr[!c]*/**": true,
-    "src/[!a]*/**": true,
-    "src/a[!p]*/**": true,
-    "src/ap[!p]*/**": true,
-    "src/app/[!f]*/**": true,
-    "src/app/f[!e]*/**": true,
-    "src/app/fe[!a]*/**": true,
-    "src/app/fea[!t]*/**": true,
-    "src/app/feat[!u]*/**": true,
-    "src/app/featu[!r]*/**": true,
-    "src/app/featur[!e]*/**": true,
-    "src/app/feature[!s]*/**": true,
-    "src/app/features/[!c]*/**": true,
-    "src/app/features/c[!o]*/**": true,
-    "src/app/features/co[!u]*/**": true,
-    "src/app/features/cou[!r]*/**": true,
-    "src/app/features/cour[!s]*/**": true,
-    "src/app/features/cours[!e]*/**": true,
-    "src/app/features/course[!s]*/**": true
+    "**/Thumbs.db": true
   },
   "files.autoSave": "afterDelay",
   "explorer.compactFolders": false,
